@@ -6,10 +6,13 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.otus.spring.dto.CommentDto;
 import ru.otus.spring.mapper.Mapper;
+import ru.otus.spring.repository.BookRepository;
 import ru.otus.spring.repository.CommentRepository;
 import ru.otus.spring.service.CommentService;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -17,23 +20,32 @@ import java.util.List;
 public class CommentServiceImpl implements CommentService {
 
     private final CommentRepository repository;
+    private final BookRepository bookRepository;
     private final Mapper mapper;
 
     @Transactional
     public CommentDto save(CommentDto dto) {
         log.info("Starting saving comment: {}", dto);
-        final var comment = repository.save(mapper.toCommentEntity(dto));
+        final var book = bookRepository.findById(dto.getBookId()).orElseGet(null);
+        final var comment = repository.save(mapper.toCommentEntity(dto, book));
 
         log.info("Successfully created a comment with id: {}", comment.getId());
-        return mapper.toCommentDto(comment);
+        return mapper.toCommentDto(comment, book.getId());
     }
 
     public List<CommentDto> findByBookId(Long bookId) {
         log.info("Starting finding comments by bookId: {}", bookId);
-        final var commentDtos = repository.findByBookId(bookId)
+        // Загружаем книгу отдельным запросом в Persistence Context
+        // Джойнить книгу ко всем комментам избыточная история, т.к приделать к ,условно, 1000 комментариям информацию об одной конкретной книге - избыточно, особенно в плане дублей
+        final var book = bookRepository.findById(bookId).orElse(null);
+        if (book == null) {
+            log.info("No book found for the ID: {}", bookId);
+            return Collections.emptyList();
+        }
+        final var commentDtos = repository.findByBook(book)
                 .stream()
-                .map(mapper::toCommentDto)
-                .toList();
+                .map(comment -> mapper.toCommentDto(comment, bookId))
+                .collect(Collectors.toList());
 
         log.info("Found comments with size: {} by bookId: {}", commentDtos.size(), bookId);
         return commentDtos;
